# docs/swagger.yaml
@@ -10,6 +10,8 @@ definitions:
     type: object
   userModel.UpdateUserRequest:
     properties:
+      bio:
+        type: string
       email:
         type: string
       profilePicture:
@@ -59,6 +61,40 @@ definitions:
 info:
   contact: {}
 paths:
+  /authentication/login:
+    get:
+      description: Redirects to Google's OAuth2 consent page
+      produces:
+      - application/json
+      responses:
+        "302":
+          description: Redirects to Google OAuth
+          schema:
+            type: string
+        "500":
+          description: Returns error if session state cannot be generated
+          schema: {}
+      summary: Initiate Google OAuth2 login
+      tags:
+      - authentication
+  /authentication/user:
+    get:
+      description: Returns information about the currently authenticated user
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Returns user object
+          schema:
+            $ref: '#/definitions/userModel.UserDTO'
+        "404":
+          description: User not found
+          schema: {}
+      security:
+      - ApiKeyAuth: []
+      summary: Get authenticated user info
+      tags:
+      - authentication
   /database/health:
     get:
       description: Gets the state of the connected database
